# ascompiler

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.claude/: settings.local.json
ascompiler/: Cargo.toml
ascompiler-test/: Cargo.toml
ascompiler-test/src/: cli.rs  codegen.rs  lexer.rs  lib.rs  parser.rs  semantic.rs  stdlib.rs
ascompiler/src/: cli.rs  codegen.rs  lexer.rs  main.rs  parser.rs  semantic.rs  stdlib.rs
astest/: 01_variables.as  02_operators.as  03_control_flow.as  04_functions.as  05_arrays.as  06_structs.as  07_objects.as  08_strings.as  09_modules.as  10_comprehensive.as  11_edge_cases.as  12_bool_literals.as  13_typed_arrays.as  TEST_REPORT.md
crates/wenyuan-ffi/: Cargo.toml
crates/wenyuan-ffi-macros/: Cargo.toml
crates/wenyuan-ffi/src/: lib.rs
crates/wenyuan-ffi/tests/: export.rs
demo/: a+b问题.as  condition.as  ffi.as  object.as  struct.as  test.as
demo/asproj/: project.ascfg
demo/asproj/src/: main.as
examples/rust-ffi/: Cargo.toml
examples/rust-ffi/src/: lib.rs
runtime/: std_io.c
salt/: Cargo.toml
salt/src/: main.rs
src/: cli.rs  codegen.rs  lexer.rs  lib.rs  main.rs  parser.rs  semantic.rs  stdlib.rs
std/: 输入输出.as
wenyuan-ffi/: Cargo.toml
wenyuan-ffi-macros/: Cargo.toml
wenyuan-ffi-macros/src/: lib.rs
